Working fabric module, should be relatively easy for forge and neo